Minor layout changes, fix 'string spacing'

--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,5 @@
 #gitar {
-  height: 300px;
+  height: 240px;
 }
 
 #gitar-neck {
@@ -9,7 +9,7 @@
 }
 
 .string {
-  height: 50px;
+  height: 40px;
   background-color: #efefef;
   background-image: url(bg-string.png);
   background-position: center;
@@ -24,18 +24,25 @@
   width: 25px;
   color: #fff;
   height: inherit;
+  line-height: 40px;
 }
 
 .note {
   flex-grow: 1;
   text-align: center;
+  font-weight: bold;
   justify-content: center;
-  line-height: 50px;
+  line-height: 40px;
   border-right: 1px solid #000;
 }
 
-.third {
+.interval {
   background-color: red;
+}
+
+.root {
+  background-color: grey;
+  color: white;
 }
 
 .note-label {
